samples/_failures_safe/1761269279_1e15bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73e33a59.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_73e33a59.c:152:52: error: missing terminating " character
  152 |         "IDLE", "READY", "PROCESSING", "COMPLETE", "ERROR
      |                                                    ^~~~~~
./samples/SAFE/__tmp_73e33a59.c:152:9: error: expected expression at end of input
  152 |         "IDLE", "READY", "PROCESSING", "COMPLETE", "ERROR
      |         ^~~~~~
./samples/SAFE/__tmp_73e33a59.c:152:9: error: expected declaration or statement at end of input
